# gbq

./: Makefile  README.md  pyproject.toml
src/: gbq.py
