[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gbq"
dynamic = ["version"]
authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["pandas", "pandas-gbq", "pyarrow"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
gbq = "gbq:app"


[tool.setuptools_scm]

